# agentic-hire-ai

./: .editorconfig  .env.example  .gitignore  README.md  main.py  pyproject.toml  ui.py
src/: config.py  debug_db.py  graph.py  utils.py
src/agents/: agents.py  orchestrator.py  scout.py  tailor.py
src/config/: app.py  logging.py  settings.py
src/schema/: state.py
src/tools/: job_validator.py  scrape.py  search.py  vectordb.py
tests/: test_graph.py  test_utils.py
tests/tools/: test_job_validator.py  test_scrape.py  test_search.py  test_vectordb.py
